--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,17 +1,14 @@
 [versions]
 # Minecraft
-minecraft-version = "1.21.1"
-minecraft-required = ">=1.21.1"
-minecraft-forge-compatible = "1.21.1"
-minecraft-fabric-compatible = "1.21.1"
-minecraft-neoforge-compatible = "1.21.1"
+minecraft-version = "1.21.8"
+minecraft-required = ">=1.21.8"
+minecraft-fabric-compatible = "1.21.8"
 
-yarn = "1.21.1+build.3"
-quilt-mappings = "1.21.1+build.9"
+yarn = "1.21.8+build.1"
 
 # Fabric
-fabric-loader = "0.16.+"
-fabric-api = "0.115.0+1.21.1"
+fabric-loader = "0.18.+"
+fabric-api = "0.136.1+1.21.8"
 
 # Forge
 forge-loader = "1.21.1-52.1.0"
@@ -20,7 +17,7 @@ forge-loader = "1.21.1-52.1.0"
 neoforge-loader = "21.1.121"
 
 # Mods
-trinkets = "3.10.0"
+accessories = "1.3.8-beta+1.21.8"
 curios = "5.9.1+1.20.1"
 emi = "1.1.10+1.21"
 
@@ -37,22 +34,14 @@ minotaur = "2.+"
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft-version" }
 yarn = { module = "net.fabricmc:yarn", version.ref = "yarn" }
-quilt-mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt-mappings" }
 
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
 
-forge-loader = { module = "net.minecraftforge:forge", version.ref = "forge-loader" }
-neoforge-loader = { module = "net.neoforged:neoforge", version.ref = "neoforge-loader" }
-
-trinkets = { module = "dev.emi:trinkets", version.ref = "trinkets" }
-
-curios = { module = "top.theillusivec4.curios:curios-forge", version.ref = "curios" }
+accessories = { module = "io.wispforest:accessories-fabric", version.ref = "accessories" }
 
 emi = { module = "dev.emi:emi-xplat-intermediary", version.ref = "emi" }
 emi-fabric = { module = "dev.emi:emi-fabric", version.ref = "emi" }
-emi-forge = { module = "dev.emi:emi-forge", version.ref = "emi" }
-emi-neoforge = { module = "dev.emi:emi-neoforge", version.ref = "emi" }
 
 annotations = { module = "org.jetbrains:annotations", version.ref = "annotations" }
 mixin = { module = "net.fabricmc:sponge-mixin", version.ref = "mixin" }
@@ -60,13 +49,9 @@ mixin = { module = "net.fabricmc:sponge-mixin", version.ref = "mixin" }
 testng = { module = "org.testng:testng", version.ref = "testng" }
 
 [bundles]
-fabric = ["fabric-loader", "fabric-api", "trinkets"]
-forge = ["curios"]
-neoforge = []
+fabric = ["fabric-loader", "fabric-api", "accessories"]
 
 fabric-runtime = ["emi-fabric"]
-forge-runtime = []
-neoforge-runtime = ["emi-neoforge"]
 
 compile-only = ["annotations"]
 
